--- a/Dockerfile文件构成
+++ b/Dockerfile文件构成
@@ -1,4 +1,5 @@
-Dockerfile是一个文本文件，内容中包含了一条或多条指令，每条指令构建镜像文件的一层。Dockerfile文件一般以“#”注释行开头，包括基础镜像信息、维护者信息、镜像操作指令、启动时执行指令等。
+Dockerfile是一个文本文件，内容中包含了一条或多条指令，每条指令构建镜像文件的一层。
+Dockerfile文件一般以“#”注释行开头，包括基础镜像信息、维护者信息、镜像操作指令、启动时执行指令等。
 
 FROM image.tag  定义使用哪个基础镜像启动构建流程  FROM centos
 
